# machines-wfw

./: CMakeLists.txt  README.md
.github/workflows/: build.yaml
src/: CMakeLists.txt
src/libdev/afx/: AfxSdlApp.cpp  CMakeLists.txt  resource.hpp
src/libdev/ani/: AniSmackerRegular.cpp
src/libdev/base/: compiler.hpp  memwatch.cpp  poolallo.hpp  trackeri.cpp
src/libdev/ctl/: CMakeLists.txt  bitvec.hpp  function.hpp  vector.hpp
src/libdev/device/: rate.hpp
src/libdev/envirnmt/: parser.cpp
src/libdev/graph/: astaralg.hpp  vertex.hpp
src/libdev/gui/: button.cpp  displaya.hpp  font.cpp  font.hpp  iconseq.hpp  manager.hpp  painter.cpp  restring.cpp  restring.hpp  sslistbx.cpp
src/libdev/gxin/: gxfile.cpp  gxfile.hpp  gxpolyvert3.hpp
src/libdev/machgui/: ProgressIndicator.hpp  chatmsgs.hpp  corral.cpp  ctxcamp.cpp  ctxoptns.cpp  ctxsave.cpp  databasi.cpp  dbelemei.cpp  dbelemen.cpp  dbelemen.hpp  ddrawdrop.cpp  ddrawdrop.hpp  dropdown.cpp  dropdown.hpp  dropdwnc.cpp  dropdwnc.hpp  ingame.cpp  ingame.hpp  numpdrop.cpp  numpdrop.hpp  squadron.hpp
src/libdev/machlog/: actor.hpp  armourer.cpp  canattac.cpp  canattac.hpp  canattai.cpp  condreac.cpp  constroi.cpp  constron.cpp  constron.hpp  inout.cpp  inout.hpp  machine.hpp  mcmotseq.cpp  mcmotseq.hpp  motconst.hpp  move.hpp  planet.cpp  planet.hpp  planeti.cpp  races.hpp  racesimp.cpp  resitem.hpp  vmman.cpp
src/libdev/machphys/: constron.hpp  damage.cpp  flames.cpp  (+8 more)
test/: CMakeLists.txt
test/base/: PersistenceTests.cpp
test/device/: DevButtonEventTests.cpp  DevEventQueueTests.cpp  DevMouseTests.cpp
(+81 files in other folders)
